<resources>
    <!--region WateringPlantsApplication-->
    <!--Name-->
    <string name="app_name">Watering Plants</string>
    <!--endregion-->

    <!--region WateringPlantsActivity-->
    <!--Bottom navigation menu and app bar title-->
    <string name="plants">Plants</string>
    <string name="encyclopedia">Encyclopedia</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <!--endregion-->

    <!--region PlantsFragment-->
    <!--App bar menu-->
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="delete_all">Delete all</string>
    <!--endregion-->

    <!--region PlantFragment-->
    <!--App bar title-->
    <string name="add_plant">Add plant</string>
    <string name="edit_plant">Edit plant</string>

    <!--App bar Menu-->
    <string name="create">Create</string>
    <string name="update">Update</string>

    <!--Popup menu-->
    <string name="pick_image">Pick an image</string>
    <string name="take_photo">Take a photo</string>
    <string name="rotate_image_right">Rotate right</string>
    <string name="rotate_image_left">Rotate left</string>

    <!--Snackbar messages-->
    <string name="plant_name_empty">Nameless plant? Not gonna work…</string>
    <string name="plant_description_empty">Descriptionless plant? Not gonna work…</string>
    <string name="plant_watering_period_empty">Wateringless plant? Not gonna work…</string>
    <string name="plant_image_path_empty">Imageless plant? Not gonna work…</string>
    <string name="plant_complete_empty">Pure emptiness? Not gonna work…</string>
    <string name="plant_name_and_description_empty">Nameless and descriptionless plant? Not gonna work…</string>
    <string name="plant_name_and_watering_period_empty">Nameless and wateringless plant? Not gonna work…</string>
    <string name="plant_name_and_image_path_empty">Nameless and imageless plant? Not gonna work…</string>
    <string name="plant_name_description_and_watering_period_empty">Nameless, descriptionless and wateringperiodless plant? Not gonna work…</string>
    <string name="plant_name_description_and_image_path_empty">Nameless, descriptionless and imageless plant? Not gonna work…</string>
    <string name="plant_name_watering_period_and_image_path_empty">Nameless, wateringless and imageless plant? Not gonna work…</string>
    <string name="plant_description_and_image_path_empty">Descriptionless and imageless plant? Not gonna work…</string>
    <string name="plant_description_and_watering_period_empty">Descriptionless and wateringless plant? Not gonna work…</string>
    <string name="plant_description_watering_period_and_image_path_empty">Descriptionless, wateringless and imageless plant? Not gonna work…</string>
    <string name="plant_watering_period_and_image_path_empty">Wateringless and imageless plant? Not gonna work…</string>
    <string name="plant_successfully_inserted">Created successfully</string>
    <string name="plant_successfully_updated">Updated successfully</string>
    <string name="plant_img_failed_to_load">Image failed to load. Make sure the image is still available.</string>
    <string name="dialog_reversed">Changes were discarded.</string>

    <!--Dialog messages-->
    <string name="dialog_title">Discard changes</string>
    <string name="dialog_message">Are you sure you want to discard changes you\'ve made?</string>
    <string name="dialog_confirmation">Yes</string>
    <string name="dialog_denial">No</string>


    <!--Layout-->
    <string name="plant_img_content_description">A plant</string>
    <string name="next_watering_img_content_description">Three drops</string>
    <string name="watering_period_img_content_description">A calendar</string>
    <string name="take_photo_img_content_description">A photo camera</string>
    <string name="water_button">Water</string>
    <string name="plant_name">Enter plant name</string>
    <string name="plant_description">Enter plant description</string>
    <string name="pick_photo_img_content_description">A landscape</string>
    <string name="hourglass">An hourglass</string>
    <string name="watering_period_default_value">1</string>
    <!--endregion-->
</resources>