<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.PlantFragment">

    <ImageView
        android:id="@+id/plant_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/missing_image"
        android:contentDescription="@string/plant_img_content_description"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_medium"
        android:textSize="38sp"
        app:layout_constraintEnd_toStartOf="@+id/watering_period_img"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_img"
        tools:text="Field rose" />

    <ScrollView
        android:id="@+id/description_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/water_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/name_text"
        app:layout_constraintTop_toBottomOf="@+id/name_text"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"
            tools:text="@tools:sample/lorem/random" />
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.60" />

    <TextView
        android:id="@+id/next_watering_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/water_button"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/description_scroll"
        app:layout_constraintTop_toBottomOf="@+id/next_watering_img"
        tools:text="1d:15h:23m:15s" />

    <Button
        android:id="@+id/water_button"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/water_button"
        app:icon="@drawable/ic_drop"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/description_scroll"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline" />

    <ImageView
        android:id="@+id/take_photo_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/take_photo_img_content_description"
        android:src="@drawable/ic_add_photo"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/next_watering_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/next_watering_img_content_description"
        android:src="@drawable/ic_watering_time"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintStart_toStartOf="@+id/description_scroll"
        app:layout_constraintTop_toTopOf="@+id/water_button" />

    <ImageView
        android:id="@+id/watering_period_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/watering_period_img_content_description"
        android:src="@drawable/ic_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_img" />

    <TextView
        android:id="@+id/watering_period_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/watering_period_img"
        app:layout_constraintEnd_toEndOf="@+id/watering_period_img"
        app:layout_constraintStart_toStartOf="@+id/watering_period_img"
        app:layout_constraintTop_toTopOf="@+id/watering_period_img"
        tools:text="5" />


</androidx.constraintlayout.widget.ConstraintLayout>